Keep alive OffscreenCanvas's wrapper object until webglcontextlost event is dispatched https://bugs.webkit.org/show_bug.cgi?id=314269

Reviewed by NOBODY (OOPS!).

webgl/lose-context-after-context-lost.html randomly caused an assertion failure
for GTK and WPE.

> ASSERTION FAILED: m_wrapper
> Source/WebCore/bindings/js/JSEventListener.h(171) :
>     JSC::JSObject* WebCore::JSEventListener::ensureJSFunction(WebCore::ScriptExecutionContext&) const

OffscreenCanvas's wrapper object was reclaimed when the webglcontextlost event
was dispatched.

222794@main fixed the same issue for HTMLCanvasElement by adding
HTMLCanvasElement::virtualHasPendingActivity(). Do the same for
OffscreenCanvas.

Tests: webgl/lose-context-after-context-lost.html

* Source/WebCore/html/OffscreenCanvas.cpp:
(WebCore::OffscreenCanvas::virtualHasPendingActivity const):
(WebCore::OffscreenCanvas::eventListenersDidChange):
* Source/WebCore/html/OffscreenCanvas.h: